--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&amp;subset=devanagari,latin-ext" rel="stylesheet">
         
         <!-- title of site -->
-        <title>Serendib Tours</title>
+        <title>Serendib Events & Tours</title>
 
         <!-- For favicon png -->
 		<link rel="shortcut icon" type="image/icon" href="assets/logo/serendib-ico.ico"/>
@@ -104,7 +104,7 @@
 						<div class="header-text">
 							<h2><span>Serendib Tours</span><br> invite you to visit Sri Lanka <span>.</span></h2>
 							<p>Explore the serendipity at the Pearl of Indian Ocean</p>
-							<a href="assets/download/browney.txt" download>download packages</a>
+							<a href="#" download>download packages</a>
 						</div><!--/.header-text-->
 					</div><!--/.col-->
 				</div><!-- /.row-->
@@ -233,7 +233,7 @@
 						<div class="col-sm-4">
 							<div class="single-horizontal-timeline">
 								<div class="experience-time">
-									<h2>2023</h2>
+									<h2>2024</h2>
 									<h3>Launching of modern website</h3>
 								</div><!--/.experience-time-->
 								<div class="timeline-horizontal-border">
@@ -268,7 +268,7 @@
 							<div class="col-md-6">
 								<div class="single-skill-content">
 									<div class="barWrapper">
-										<span class="progressText">Free Airport Pickup & Drop</span>
+										<span class="progressText">Free Airport Pickup</span>
 										<div class="single-progress-txt">
 											<div class="progress ">
 												<div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="10" aria-valuemax="100" style="">
@@ -278,7 +278,7 @@
 										</div>
 									</div><!-- /.barWrapper -->
 									<div class="barWrapper">
-										<span class="progressText">Free Home Stay for 1 night</span>
+										<span class="progressText">Free Home Stay for 1 night when booked for 5 days</span>
 										<div class="single-progress-txt">
 											<div class="progress ">
 											   <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="10" aria-valuemax="100" style="">
@@ -582,6 +582,7 @@
 				<h3 style="text-align:center;">"Rosyton is the go to person for any Sri Lankan tour arrangement"
 					-Chris Tailer, China
 				</h3>
+				<br>
 				<h3 style="text-align:center;">"Serendib tours helped me to enjoy my vacation freely without any hesitate. I would totally recommend for anyone"
 					-Tara Singh, India
 				</h3>
@@ -647,7 +648,7 @@
 								<div class="contact-adress">
 									<div class="contact-add-head">
 										<h3>Royston Fernando</h3>
-										<p>Owner of Serendib Tours</p>
+										<p>Owner of Serendib Events & Tours</p>
 									</div>
 									<div class="contact-add-info">
 										<div class="single-contact-add-info">
