--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 				<div class="row">
 					<div class="col-md-12 text-center">
 						<div class="header-text">
-							<h2><span>Serendib Tours</span><br> invite you to visit Sri Lanka <span>.</span></h2>
+							<h2><span>Serendib Events & Tours</span><br> invite you to visit Sri Lanka <span>.</span></h2>
 							<p>Explore the serendipity at the Pearl of Indian Ocean</p>
 							<a href="#" download>download packages</a>
 						</div><!--/.header-text-->
