--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 						<div class="header-text">
 							<h2><span>Serendib Events & Tours</span><br> invite you to visit Sri Lanka <span>.</span></h2>
 							<p>Explore the serendipity at the Pearl of Indian Ocean</p>
-							<a href="#" download>download packages</a>
+							<a href="" download>download packages</a>
 						</div><!--/.header-text-->
 					</div><!--/.col-->
 				</div><!-- /.row-->
