--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 				<div class="row">
 					<div class="col-md-12 text-center">
 						<div class="header-text">
-							<h2><span>Serendib Events & Tours</span><br> invite you to visit Sri Lanka <span>.</span></h2>
+							<h2><span>Serendib Events</span><br> invite you to visit Sri Lanka <span>.</span></h2>
 							<p>Explore the serendipity at the Pearl of Indian Ocean</p>
 							<a href="#">download packages</a>
 						</div><!--/.header-text-->
@@ -116,7 +116,7 @@
 		<!--about start -->
 		<section id="about" class="about">
 			<div class="section-heading text-center">
-				<h2>About Serendib Tours</h2>
+				<h2>About Serendib Events</h2>
 			</div>
 			<div class="container">
 				<div class="about-content">
@@ -187,7 +187,7 @@
 		<!--education start -->
 		<section id="journey" class="education">
 			<div class="section-heading text-center">
-				<h2>Journey of Serendib Tours</h2>
+				<h2>Journey of Serendib Events</h2>
 			</div>
 			<div class="container">
 				<div class="education-horizontal-timeline">
@@ -196,7 +196,7 @@
 							<div class="single-horizontal-timeline">
 								<div class="experience-time">
 									<h2>2013</h2>
-									<h3>Launching of Serendib Tours</h3>
+									<h3>Launching of Serendib Events</h3>
 								</div><!--/.experience-time-->
 								<div class="timeline-horizontal-border">
 									<i class="fa fa-circle" aria-hidden="true"></i>
@@ -205,7 +205,7 @@
 								<div class="timeline">
 									<div class="timeline-content">
 										<p class="description">
-											Started Serendib Tours with the intention of providing finest experiences of the island nation.
+											Started Serendib Events with the intention of providing finest experiences of the island nation.
 										</p>
 									</div><!--/.timeline-content-->
 								</div><!--/.timeline-->
