--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 								<div class="row">
 									<div class="col-sm-4">
 										<div class="single-about-add-info">
-											<h3>phone</h3>
+											<h3>call/ whatsapp/ viber</h3>
 											<p>+94 714 980 192</p>
 										</div>
 									</div>
@@ -145,7 +145,7 @@
 									<div class="col-sm-4">
 										<div class="single-about-add-info">
 											<h3>website</h3>
-											<p>www.tourserendib.com</p>
+											<p>www.serendibevents.com</p>
 										</div>
 									</div>
 								</div>
