--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 									<div class="col-sm-4">
 										<div class="single-about-add-info">
 											<h3>email</h3>
-											<p>roystonu76@gmail.com</p>
+											<p>serendibtrips@gmail.com</p>
 										</div>
 									</div>
 									<div class="col-sm-4">
@@ -657,7 +657,7 @@
 										</div>
 										<div class="single-contact-add-info">
 											<h3>email</h3>
-											<p>roystonu76@gmail.com</p>
+											<p>serendibtrips@gmail.com</p>
 										</div>
 										<div class="single-contact-add-info">
 											<h3>booking.com home stay</h3>
