--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
     <head>
         <!-- meta data -->
+	    <meta name="google-site-verification" content="B5M4Fng9Kt22pu-ZJsApkGoFC4takH2oX2zYQFbJ3L0" />
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
