--- a/index.html
+++ b/index.html
@@ -648,7 +648,7 @@
 							<div class="single-contact-box">
 								<div class="contact-adress">
 									<div class="contact-add-head">
-										<h3>Royston Fernando</h3>
+										<h3>Ranowin Fernando</h3>
 										<p>Owner of Serendib Events & Tours</p>
 									</div>
 									<div class="contact-add-info">
