--- a/index.html
+++ b/index.html
@@ -575,6 +575,18 @@
 					<div class = "element_slides">
 						<img src = "assets/images/gallery/pic6.jpg"  alt = "image 6">
 					</div>
+					<div class = "element_slides">
+						<img src = "assets/images/gallery/pic7.jpg"  alt = "image 7">
+					</div>
+					<div class = "element_slides">
+						<img src = "assets/images/gallery/pic8.jpg"  alt = "image 8">
+					</div>
+					<div class = "element_slides">
+						<img src = "assets/images/gallery/pic9.jpg"  alt = "image 9">
+					</div>
+					<div class = "element_slides">
+						<img src = "assets/images/gallery/pic10.jpg"  alt = "image 10">
+					</div>
 				</div>
 			</div>
 			</div>
