--- a/index.html
+++ b/index.html
@@ -599,7 +599,13 @@
 				<h3 style="text-align:center;">"Serendib tours helped me to enjoy my vacation freely without any hesitate. I would totally recommend for anyone"
 					-Tara Singh, India
 				</h3>
+				<br>
+				<h3 style="text-align:center;">"We enjoyed the tour very well. Thank you Royston for all the arrangements"
+					-Josua, India (ANRIA Association, India)
+				</h3>
 			</div>
+				<iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fweb.facebook.com%2Fphoto.php%3Ffbid%3D26374700515461944%26set%3Da.1238362636189079%26type%3D3&show_text=true&width=500" width="500" height="250" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+				
 			</div>
 
 		</section><!--/.profiles-->
