--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 								<div class="about-list-icon">
 									<ul>
 										<li>
-											<a href="https://www.facebook.com/serendibeventsandtours">
+											<a href="https://www.facebook.com/share/19s4aX3nkL/">
 												<i  class="fa fa-facebook" aria-hidden="true"></i>
 											</a>
 										</li><!-- / li -->
@@ -690,7 +690,7 @@
 								</div><!--/.contact-adress-->
 								<div class="hm-foot-icon">
 									<ul>
-										<li><a href="https://www.facebook.com/serendibeventsandtours"><i class="fa fa-facebook"></i></a></li><!--/li-->
+										<li><a href="https://www.facebook.com/share/19s4aX3nkL/"><i class="fa fa-facebook"></i></a></li><!--/li-->
 										<li><a href="https://www.booking.com/hotel/lk/serendib-home-stay-negombo.html"><i class="fa fa-dribbble"></i></a></li><!--/li-->
 										<li><a href="https://www.instagram.com/roystonu76/"><i class="fa fa-instagram"></i></a></li><!--/li-->
 									</ul><!--/ul-->
