--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 						<div class="header-text">
 							<h2><span>Serendib Events</span><br> invite you to visit Sri Lanka <span>.</span></h2>
 							<p>Explore the serendipity at the Pearl of Indian Ocean</p>
-							<a href="#">download packages</a>
+							<a href="https://github.com/Serendib1/serendib1.github.io/blob/main/assets/download/Sample%20Tour%20Package.pdf" download>download packages</a>
 						</div><!--/.header-text-->
 					</div><!--/.col-->
 				</div><!-- /.row-->
