--- a/index.html
+++ b/index.html
@@ -638,42 +638,21 @@
 					<div class="row">
 						<div class="col-md-offset-1 col-md-5 col-sm-6">
 							<div class="single-contact-box">
-								<div class="contact-form">
-									<form>
-										<div class="row">
-											<div class="col-sm-6 col-xs-12">
-												<div class="form-group">
-												  <input type="text" class="form-control" id="name" placeholder="Name*" name="name">
-												</div><!--/.form-group-->
-											</div><!--/.col-->
-											<div class="col-sm-6 col-xs-12">
-												<div class="form-group">
-													<input type="email" class="form-control" id="email" placeholder="Email*" name="email">
-												</div><!--/.form-group-->
-											</div><!--/.col-->
-										</div><!--/.row-->
-										<div class="row">
-											<div class="col-sm-12">
-												<div class="form-group">
-													<input type="text" class="form-control" id="subject" placeholder="Subject" name="subject">
-												</div><!--/.form-group-->
-											</div><!--/.col-->
-										</div><!--/.row-->
-										<div class="row">
-											<div class="col-sm-12">
-												<div class="form-group">
-													<textarea class="form-control" rows="8" id="comment" placeholder="Message" ></textarea>
-												</div><!--/.form-group-->
-											</div><!--/.col-->
-										</div><!--/.row-->
-										<div class="row">
-											<div class="col-sm-12">
-												<div class="single-contact-btn">
-													<a class="contact-btn" href="#" role="button">submit</a>
-												</div><!--/.single-single-contact-btn-->
-											</div><!--/.col-->
-										</div><!--/.row-->
-									</form><!--/form-->
+								<div class="row">
+
+								<form action="mailto:roystonu76@gmail.com" method="get" enctype="text/plain">
+									<div class="col-sm-6 col-xs-12"><div class="form-group">
+								    <input type="text" class="form-control" name="subject" placeholder="Subject"><br>
+									</div><!--/.form-group--></div><!--/.col-->
+									<div class="col-sm-6 col-xs-12"><div class="form-group">
+								    <input type="email" name="email" placeholder="Your Email"><br>
+									</div><!--/.form-group--></div><!--/.col-->
+									<div class="col-sm-6 col-xs-12"><div class="form-group">
+								    <textarea name="body" rows="5" cols="30" placeholder="Your Message"></textarea><br>
+									</div><!--/.form-group--></div><!--/.col-->
+								    <input type="submit" value="Send">
+								  </form>
+									
 								</div><!--/.contact-form-->
 							</div><!--/.single-contact-box-->
 						</div><!--/.col-->
