--- a/index.html
+++ b/index.html
@@ -640,7 +640,7 @@
 							<div class="single-contact-box">
 								<div class="row">
 
-								<form action="mailto:roystonu76@gmail.com" method="post" enctype="text/plain">
+								<form action="mailto:roystonu76@gmail.com" >
 									
 								    Subject : <br>
 									<input type="text" class="form-control" name="subject" placeholder="Subject"><br>
