--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 			                    <li class="smooth-menu"><a href="#benefits">benefits</a></li>
 			                    <li class="smooth-menu"><a href="#experience">experience</a></li>
 			                    <li class="smooth-menu"><a href="#gallery">gallery</a></li>
-			                    <li class="smooth-menu"><a href="www.serendibevents.com/contact">contact</a></li>
+			                    <li class="smooth-menu"><a href="/contact">contact</a></li>
 			                </ul><!--/.nav -->
 			            </div><!-- /.navbar-collapse -->
 			        </div><!--/.container-->
