--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 			                    <li class="smooth-menu"><a href="#benefits">benefits</a></li>
 			                    <li class="smooth-menu"><a href="#experience">experience</a></li>
 			                    <li class="smooth-menu"><a href="#gallery">gallery</a></li>
-			                    <li class="smooth-menu"><a href="/contact">contact</a></li>
+			                    <li class="smooth-menu"><a href="/contact.html">contact</a></li>
 			                </ul><!--/.nav -->
 			            </div><!-- /.navbar-collapse -->
 			        </div><!--/.container-->
@@ -631,46 +631,8 @@
 		<!--contact start -->
 		<section id="contact" class="contact">
 			<div class="section-heading text-center">
-				<h2>contact us</h2>
+				<a href="/contact.html"><h2>contact us</h2></a>
 			</div>
-			<div class="container">
-				<div class="contact-content">
-					<div class="row">
-
-						<div class="col-md-offset-1 col-md-5 col-sm-6">
-							<div class="single-contact-box">
-								<div class="contact-adress">
-									<div class="contact-add-head">
-										<h3>Ranowin Fernando</h3>
-										<p>Owner of Serendib Events & Tours</p>
-									</div>
-									<div class="contact-add-info">
-										<div class="single-contact-add-info">
-											<h3>phone</h3>
-											<p>+94 714 980 192</p>
-										</div>
-										<div class="single-contact-add-info">
-											<h3>email</h3>
-											<p>serendibtrips@gmail.com</p>
-										</div>
-										<div class="single-contact-add-info">
-											<h3>booking.com home stay</h3>
-											<p>https://www.booking.com/hotel/lk/serendib-home-stay-negombo.html</p>
-										</div>
-									</div>
-								</div><!--/.contact-adress-->
-								<div class="hm-foot-icon">
-									<ul>
-										<li><a href="https://www.facebook.com/share/19s4aX3nkL/"><i class="fa fa-facebook"></i></a></li><!--/li-->
-										<li><a href="https://www.booking.com/hotel/lk/serendib-home-stay-negombo.html"><i class="fa fa-dribbble"></i></a></li><!--/li-->
-										<li><a href="https://www.instagram.com/roystonu76/"><i class="fa fa-instagram"></i></a></li><!--/li-->
-									</ul><!--/ul-->
-								</div><!--/.hm-foot-icon-->
-							</div><!--/.single-contact-box-->
-						</div><!--/.col-->
-					</div><!--/.row-->
-				</div><!--/.contact-content-->
-			</div><!--/.container-->
 
 		</section><!--/.contact-->
 		<!--contact end -->
