--- a/index.html
+++ b/index.html
@@ -632,6 +632,7 @@
 		<section id="contact" class="contact">
 			<div class="section-heading text-center">
 				<a href="/contact.html"><h2>contact us</h2></a>
+				<p align="center">Click here for contact details</p>
 			</div>
 
 		</section><!--/.contact-->
