--- a/index.html
+++ b/index.html
@@ -632,7 +632,7 @@
 		<section id="contact" class="contact">
 			<div class="section-heading text-center">
 				<a href="/contact.html"><h2>contact us</h2></a>
-				<p align="center">Click here for contact details</p>
+				<a href="/contact.html"><p align="center" color="red">Click here for contact details</p></a>
 			</div>
 
 		</section><!--/.contact-->
