--- a/contact.html
+++ b/contact.html
@@ -136,21 +136,38 @@
 							<div class="single-contact-box">
 								<div class="contact-adress">
 									<div class="contact-add-head">
-										<h3>Ranowin Fernando</h3>
+										<h3>Royston Fernando</h3>
 										<p>Owner of Serendib Events & Tours</p>
 									</div>
 									<div class="contact-add-info">
 										<div class="single-contact-add-info">
 											<h3>phone</h3>
-											<p>+94 714 980 192</p>
+											<p>+94 714 980 192  - International Number</p>
 										</div>
 										<div class="single-contact-add-info">
 											<h3>email</h3>
 											<p>serendibtrips@gmail.com</p>
+											<p>roystonu76@gmail.com</p>
 										</div>
 										<div class="single-contact-add-info">
 											<h3>booking.com home stay</h3>
 											<p>https://www.booking.com/hotel/lk/serendib-home-stay-negombo.html</p>
+										</div>
+										<div class="single-contact-add-info">
+											<h3>Facebook</h3>
+											<a href="https://www.facebook.com/share/19s4aX3nkL/">Royston Fernando</a>
+										</div>
+										<div class="single-contact-add-info">
+											<h3>Instagram</h3>
+											<a href="https://www.instagram.com/roystonu76/">Royston Fernando</a>
+										</div>
+										<div class="single-contact-add-info">
+											<h3>Whatsapp</h3>
+											<p>+94 714 980 192</p>
+										</div>
+										<div class="single-contact-add-info">
+											<h3>WeChat</h3>
+											<p>+94 714 980 192</p>
 										</div>
 									</div>
 								</div><!--/.contact-adress-->
