--- a/contact.html
+++ b/contact.html
@@ -150,8 +150,8 @@
 											<p>roystonu76@gmail.com</p>
 										</div>
 										<div class="single-contact-add-info">
-											<h3>booking.com home stay</h3>
-											<p>https://www.booking.com/hotel/lk/serendib-home-stay-negombo.html</p>
+											<h3>Serendib Homestay</h3>
+											<a href="https://www.booking.com/hotel/lk/serendib-home-stay-negombo.html">Serendib Homestay</a>
 										</div>
 										<div class="single-contact-add-info">
 											<h3>Facebook</h3>
